# rust-chromium-azure-functions-crawler-poc

./: .gitignore  Cargo.toml  README.MD  local.settings.json
Get-Prerender/: function.json
src/: main.rs
